# openssa

./: .bumpversion.cfg  .env  .eslintrc.js  .flake8  .gitignore  .prospector.yaml  .pylintrc  .ruff.toml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GETTING_STARTED.html  GETTING_STARTED.md  LICENSE.html  LICENSE.md  Makefile  PROJECT_PHILOSOPHY.html  README.md  alembic.ini  chroma.sqlite3  genindex.html  index.html  l2.agent.abstract.html  l2.agent.agent.html  l2.agent.html  l2.config.html  l2.html  l2.knowledge.fact.abstract.html  l2.knowledge.fact.html  l2.knowledge.heuristic.abstract.html  l2.knowledge.heuristic.html  l2.knowledge.html  l2.knowledge.inference_rule.abstract.html  l2.knowledge.inference_rule.html  l2.planning.abstract.html  l2.planning.abstract.plan.html  l2.planning.abstract.planner.html  l2.planning.hierarchical.html  l2.planning.hierarchical.plan.html  (+226 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: install-and-test.yml  install-lint-test-on-mac.yml  install-lint-test-on-ubuntu.yml  install-lint-test-on-win.yml  install-lint-test.yml  install.yml  make_test.yml  publish-docs.yml  release.yml
DESIGN_PRINCIPLES/: index.html
GETTING_STARTED/: index.html
LICENSE/: index.html
MAKEFILE_INFO/: index.html
PROJECT_PHILOSOPHY/: index.html
_static/: documentation_options.js
apps/chatssm/: app.py  requirements.txt  routes.py  run.py  test.py
community/CODE_OF_CONDUCT/: index.html
community/CONTRIBUTING/: index.html
contrib/: consistency_eval.py  consistency_prompt.txt
deprecated/chatssm-vinh/: Dockerfile  Procfile  __init__.py  requirements.txt
dev/design_principles/: index.html
dev/howtos/: index.html
dev/makefile_info/: index.html
diagrams/: README.md  index.html  ssm.drawio
docs/: .gitignore  CODE_OF_CONDUCT.md  GETTING_STARTED.md  MAKEFILE_INFO.md  Makefile  PROJECT_PHILOSOPHY.md  api_nav.py  conf.py  docs.shared  index.md  mkdocs.yml.inc
docs.shared/: GETTING_STARTED.md  LICENSE.md
docs.shared/GETTING_STARTED/: index.html
docs.shared/LICENSE/: index.html
docs.shared/MAKEFILE/: index.html
docs.shared/community/: CODE_OF_CONDUCT.md
docs.shared/diagrams/: README.md  index.html
docs/community/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
docs/dev/: design_principles.md  howtos.md  makefile_info.md
docs/diagrams/: ssa-agent.graphviz  ssm.drawio
docs/integrations/: lepton_ai.md  llama_index.md  vectara.md
docs/support/: README.md
examples/: .env.template  .gitignore  MAKEFILE.md  Makefile  Planning-and-Reasoning.ipynb  RAG-with-Fine-Tuned-Models.ipynb  README.md  Tutorial.ipynb  evaluation.py  jest.config.js
examples/9.11-vs-9.9/: README.md
examples/FinanceBench/: .env.template  .env.template.lab  .gitignore  GPT4o-with-Vector-Stores_use_case.py  Makefile  README.md  dana.py  data.py  data_and_knowledge.py  eval.py  expert-knowledge.txt  expert-plan-map.yml  expert-plan-templates.yml  expert-plans-map.yml  expert-plans.yml  expert-programs.yml  export-multi-runs.py  ground-truths.yml  htp-oodar-agent.py  htp_oodar_agent.py  instructions.yaml  langchain_react.py  log.py  make.bat  ooda.py  ooda_ssa.py  openai-instructions.txt  openai_assist.py  openai_vector_stores.py  plan_creation_task_depth_analysis.csv  prob_solve.py  rag-default.py  rag-finetuned-embed-and-lm.py  rag-finetuned-embed-only.py  rag-finetuned-lm-only.py  rag-gpt4-lm.py  rag-ground-truths.yml  rag-test.py  rag.py  rag_default.py  (+11 more)
examples/FinanceBench-AMD/: .gitignore  dana.py  data_and_knowledge.py  util.py
examples/FinanceBench-Lite/: Makefile  README.md  eval.py  knowledge-store.txt  program-store.yml  rag-ground-truths.yml  util.py
examples/SemiKong/: README.md
examples/chatssm/: .bumpversion.cfg  Dockerfile  Makefile  Procfile  README.md  __init__.py  app.py  cloudbuild.yaml  config.py  pyproject.toml  routes.py
examples/chatssm-vinh/: app.py  config.py  pyproject.toml  routes.py
examples/data/: notebook_qa_comparion.csv  qa_comparion.csv  qa_standard_agent_comparion.csv
examples/financebench/: .env.template  .gitignore  Makefile  Planning-and-Reasoning.ipynb  README.md  streamlit-main.py
examples/financial-research/: .gitignore  Makefile  dataproc.py  prob_solve.py  requirements.txt  ssas.py  streamlit-main.py  test.ipynb
examples/hvac-data-monitoring/: Sensor_Readings.txt  ans2.md  hvac_measurements.csv  make.bat  semikong_lm.py  streamlit-main.py
examples/integrations/: lepton_ai.ipynb  llama_index.ipynb  mydocs.py  openai.ipynb
examples/japanese-demo-knowledge-program/: README.md  agent.py  app.py  expert-knowledge.md  expert-programs.yml  main.py  pyproject.toml
examples/japanese-easy-demo/: .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt  (+1 more)
examples/kbase/: .bumpversion.cfg  .gitignore  Dockerfile  Makefile  Procfile  README.md  app.py  app.yaml  config.py  pyproject.toml  routes.py
examples/kbase/deprecated/: Dockerfile  cloudbuild.yaml
examples/kbase/static/css/: styles.css
examples/kbase/static/js/: discuss.js  knowledge.js
examples/kbase/templates/: index.html
examples/semiconductor/semiconductor-ui/api/: Dockerfile  answer_map.py  expert-program-space.yml  main.py  pyproject.toml  start.sh
examples/semiconductor/semiconductor-ui/api/answer_files/: ans_1.md  ans_1_1.md  ans_2.md  ans_3.md  ans_4.md
examples/ssa-prob-solver/: .gitignore  Dockerfile  MAKEFILE.md  Makefile  app.yaml  config.py  pyproject.toml
examples/ssa-prob-solver/static/css/: styles.css
examples/ssa-prob-solver/static/images/favicon/: html
examples/ssa-prob-solver/tests/__tests__/: discuss.test.js
examples/use-rdb-resource/: .env.template  .gitignore  README.md  db_connector.py  db_index.py  main.py  make_example_table_data.py  myvanna.py  pyproject.toml
openssa/: README.md  VERSION  __init__.py
openssm/: Makefile  README.md  __init__.py  config.py
requirements/: docs.txt  lint.txt  test.txt
search/: search_index.json
support/: index.html
tests/: .tests.py.swp  config.py  jest.config.js  jest.setupTests.js  package.json  run.py  run_tests.sh  tests.py
(+584 files in other folders)
