[tool.poetry]
name = "openssa"
version = "0.24.3.12"

authors = [
  "Aitomatic, Inc. <engineering@aitomatic.com>",
  "Christopher Nguyen <ctn@aitomatic.com>",
  "Vinh Luong <vinh@aitomatic.com>",
  "Sang Dinh <sang@aitomatic.com>",
]
maintainers = [
  "Aitomatic, Inc. <engineering@aitomatic.com>",
  "Vinh Luong <vinh@aitomatic.com>",
  "Sang Dinh <sang@aitomatic.com>",
  "Chanh Le <chanh@aitomatic.com>",
]

license = "Apache-2.0"

description = "OpenSSA: Small Specialist Agents for Industrial AI"
readme = "README.md"

homepage = "https://openssa.org"
repository = "https://github.com/aitomatic/openssa"
documentation = "https://aitomatic.github.io/openssa"

keywords = [
  "Artificial Intelligence", "A.I.", "AI",
  "industrial",
  "specialist", "specialized",
  "domain", "expertise", "knowledge",
]
classifiers = [
]

packages = [
  {include = "openssa"},
]

include = [
]
exclude = [
  "**/.openssa/",  # OpenSSA cache data
]


[tool.poetry.group.dev.dependencies]
ipykernel = ">=6.29"

[tool.poetry.group.docs.dependencies]
sphinx = ">=7.2"
sphinx-autobuild = ">=2024.2"
sphinx-press-theme = ">=0.8"
myst-parser = ">=2.0"

[tool.poetry.group.lint.dependencies]
flake8 = ">=7.0"
pylint = ">=3.1"
ruff = ">=0.3"
pydocstyle = ">=6.3"

[tool.poetry.group.test.dependencies]
pytest = ">=8.1"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
# OpenAI interface
openai = ">=1.13"
# LlamaIndex & related
llama-index = ">=0.10.18"  # should keep up-to-date with Llama-Index's minor releases (often backward-incompatible)
llama-index-embeddings-azure-openai = ">=0.1"
llama-index-llms-azure-openai = ">=0.1"
llama-index-readers-web = ">=0.1"
docx2txt = ">=0.8"  # for reading .docx files
pypdf = ">=4.1"  # for reading .pdf files
pycryptodome = ">=3.20"  # for reading .pdf files: PyCryptodome is required for AES algorithm
# file systems
fsspec = ">=2024.2"  # base/local file system
adlfs = ">=2024.2"  # Azure Data Lake
gcsfs = ">=2024.2"  # Google Cloud Storage
s3fs = ">=2024.2"  # S3
# misc / other
click = ">=8.1"
google-api-python-client = ">=2.121"
httpx = ">=0.27"
loguru = ">=0.7"
pydantic = ">=2.6"
python-dotenv = ">=1.0"
tqdm = ">=4.66"

# optional dependencies required by extras
streamlit = {version = ">=1.32", optional = true}
streamlit-mic-recorder = {version = ">=0.0.8", optional = true}

[tool.poetry.extras]
contrib = [
  "streamlit",
  "streamlit-mic-recorder",
]


[tool.poetry.scripts]
openssa = "openssa.utils.cli:openssa_cli"


[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core >= 1.9",
]


# pylint.readthedocs.io/en/latest/user_guide/usage/run.html
# pylint.readthedocs.io/en/latest/user_guide/configuration/index.html
[tool.pylint."messages control"]
disable = [
  "astroid-error",
  "attribute-defined-outside-init",
  "duplicate-code",
  "fixme",
  "import-error",
  "line-too-long",
  "missing-class-docstring",
  "missing-function-docstring",
  "missing-module-docstring",
  "raw-checker-failed",
  "redefined-outer-name",
  "relative-beyond-top-level",
  "too-few-public-methods",
  "unnecessary-pass",
]


[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]
filterwarnings = [
  "ignore:pkg_resources is deprecated as an API:DeprecationWarning",
  "ignore:Deprecated call to `pkg_resources.declare_namespace.*google.*:DeprecationWarning",
]
