[tool.poetry]
name = "openssa"
version = "0.24.4.24"

authors = [
  "Aitomatic, Inc. <engineering@aitomatic.com>",
  "Christopher Nguyen <ctn@aitomatic.com>",
  "Vinh Luong <vinh@aitomatic.com>",
  "Sang Dinh <sang@aitomatic.com>",
]
maintainers = [
  "Aitomatic, Inc. <engineering@aitomatic.com>",
  "Vinh Luong <vinh@aitomatic.com>",
  "Sang Dinh <sang@aitomatic.com>",
  "Chanh Le <chanh@aitomatic.com>",
]

license = "Apache-2.0"

description = "OpenSSA: Small Specialist Agents for Industrial AI"
readme = "README.md"

homepage = "https://openssa.org"
repository = "https://github.com/aitomatic/openssa"
documentation = "https://aitomatic.github.io/openssa"

keywords = [
  "Artificial Intelligence", "A.I.", "AI",
  "industrial",
  "specialist", "specialized",
  "domain", "expertise", "knowledge",
]
classifiers = [
]

packages = [
  {include = "openssa"},
]

include = [
]
exclude = [
  "**/.openssa/",  # OpenSSA cache data
]


[tool.poetry.group.dev.dependencies]
ipykernel = ">=6.29"
notebook = ">=7.2"

[tool.poetry.group.docs.dependencies]
sphinx = ">=7.3"
sphinx-autobuild = ">=2024.4"
sphinx-press-theme = ">=0.9"
myst-parser = ">=3.0"

[tool.poetry.group.lint.dependencies]
flake8 = ">=7.0"
pylint = ">=3.2"
ruff = ">=0.4"

[tool.poetry.group.test.dependencies]
pytest = ">=8.2"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
# Llama interface
llamaapi = ">=0.1"
# OpenAI interface
openai = ">=1.30"
# LlamaIndex & related
llama-index = ">=0.10"
llama-index-embeddings-azure-openai = ">=0.1"
llama-index-llms-azure-openai = ">=0.1"
llama-index-readers-web = ">=0.1"
docx2txt = ">=0.8"  # for reading .docx files
pypdf = ">=4.2"  # for reading .pdf files
pycryptodome = ">=3.20"  # for reading .pdf files: PyCryptodome is required for AES algorithm
# file systems
fsspec = ">=2024.5"  # base/local file system
adlfs = ">=2024.4"  # Azure Data Lake
gcsfs = ">=2024.5"  # Google Cloud Storage
s3fs = ">=2024.5"  # S3
# misc / other
click = ">=8.1"
google-api-python-client = ">=2.130"
httpx = ">=0.27"
loguru = ">=0.7"
pydantic = ">=2.7"
python-dotenv = ">=1.0"
torch = ">=2.2,<2.3"  # 2.3 fails installing on Mac with M chip
tqdm = ">=4.66"

# optional dependencies required by extras
# llama-index-callbacks-argilla = {version = ">=0.1", optional = true}
llama-index-callbacks-arize-phoenix = {version = ">=0.1", optional = true}
llama-index-callbacks-deepeval = {version = ">=0.1", optional = true}
llama-index-callbacks-honeyhive = {version = ">=0.1", optional = true}
llama-index-callbacks-langfuse = {version = ">=0.1", optional = true}
llama-index-callbacks-openinference = {version = ">=0.1", optional = true}
llama-index-callbacks-promptlayer = {version = ">=0.1", optional = true}
llama-index-callbacks-wandb = {version = ">=0.1", optional = true}
streamlit = {version = ">=1.35", optional = true}
streamlit-extras = {version = ">=0.4", optional = true}
streamlit-mic-recorder = {version = ">=0.0.8", optional = true}

[tool.poetry.extras]
contrib = [
  "streamlit",
  "streamlit-extras",
  "streamlit-mic-recorder",
]
llama-index-callbacks = [
  "llama-index-callbacks-arize-phoenix",
  "llama-index-callbacks-deepeval",
  "llama-index-callbacks-honeyhive",
  "llama-index-callbacks-langfuse",
  "llama-index-callbacks-openinference",
  "llama-index-callbacks-promptlayer",
  "llama-index-callbacks-wandb",
]


[tool.poetry.scripts]
openssa = "openssa.utils.cli:openssa_cli"


[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core >= 1.9",
]


# pylint.readthedocs.io/en/latest/user_guide/usage/run.html
# pylint.readthedocs.io/en/latest/user_guide/configuration/index.html
[tool.pylint."messages control"]
disable = [
  "astroid-error",
  "attribute-defined-outside-init",
  "duplicate-code",
  "fixme",
  "import-error",
  "invalid-name",
  "line-too-long",
  "missing-class-docstring",
  "missing-function-docstring",
  "missing-module-docstring",
  "raw-checker-failed",
  "redefined-outer-name",
  "relative-beyond-top-level",
  "too-few-public-methods",
  "unnecessary-pass",
]


[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]
filterwarnings = [
  "ignore:pkg_resources is deprecated as an API:DeprecationWarning",
  "ignore:Deprecated call to `pkg_resources.declare_namespace.*google.*:DeprecationWarning",
]
