[tool.poetry]
name = "kbase"
version = "0.0.3"
description = "Knowledge-Base Sandbox"
authors = ["ctn <ctn@aitomatic.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.scripts]
flaskapp = 'app:app'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
#openssm = { path = "dist/openssm-0.1.5-py3-none-any.whl" }
openssm = ">=0.1.0"
python = ">=3.8.1,<4.0"
openai = "^0.27.0"
flask = "^2.0.0"
python-dotenv = "^0.19.0"
llama-index = ">=0.6.9"
llama-hub = ">=0.0.3"
gunicorn = ">=20.1.0"
#nvidia-cuda-nvrtc-cu11 = "=11.7.99"
#nvidia-cuda-runtime-cu11 = "=11.7.99"
