[tool.poetry]
name = "use-rdb-resource"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pymysql = "^1.1.1"
kaleido = "0.2.1"
vanna = "^0.7.3"
chromadb = "^0.5.11"
faker = "^30.1.0"
sqlalchemy = "^2.0.35"
openai = "^1.51.2"
openssa = "^0.24.10.10"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
