[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Hung Vo <vophihungvn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.30.5"
fastapi = "^0.112.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
